# docker-credential-icr

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
src/: credential.rs  error.rs  lib.rs  main.rs  oauth.rs  oidc.rs  server.rs  token_store.rs
